<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/acs_monitor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="20dp">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">


        <Button
            android:id="@+id/bt_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/mediumpurple"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/button1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/bt_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/mediumpurple"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/button2"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/bt_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/mediumpurple"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/button3"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/bt_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/mediumpurple"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/button4"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>