<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/darkgray"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_safety"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:background="@color/green"
            android:gravity="center_horizontal"
            android:textSize = "38sp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/plum"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:textSize = "30sp"
            android:text="@string/max_load" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize = "30sp"
            android:background="@color/plum"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/hand_load" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/tv_max_load"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:textSize = "30sp"
            android:text="" />

        <TextView
            android:id="@+id/tv_hang_load"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize = "30sp"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:background="@color/plum"
                android:gravity="center_horizontal"
                android:text="@string/boom_length"
                android:textSize="25sp" />

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="0dp"
                android:background="@color/plum"
                android:gravity="center_horizontal"
                android:text="@string/boom_angle"
                android:textSize="25sp" />

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="0dp"
                android:background="@color/plum"
                android:gravity="center_horizontal"
                android:text="@string/work_radius"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_boom_length"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:gravity="center_horizontal"
                android:text=""
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_boom_angle"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="0dp"
                android:gravity="center_horizontal"
                android:text=""
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_work_radius"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="0dp"
                android:gravity="center_horizontal"
                android:text=""
                android:textSize="25sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>